--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,14 @@
+.mainContainer{
+  padding: 0;
+  margin: 0;
+}
+.section{
+  margin: 0;
+  padding: 0;
+}
 .main {
-  padding: 5rem 0;
+  padding: 0;
+  margin: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
