--- a/styles/language-picker.module.css
+++ b/styles/language-picker.module.css
@@ -1,6 +1,15 @@
 .container{
     display: flex;
+    position: fixed;
+    bottom: 50px;
+    left: 50px;
+    z-index: 99;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 .selector{
-    color: rgb(100, 27, 27);
+    color: rgb(100, 27, 27);margin: 0;
+    margin: 0;
+    padding: 0;
 }
