--- a/styles/circle-text-svg.module.css
+++ b/styles/circle-text-svg.module.css
@@ -1,13 +1,22 @@
 .container{
-    height: 100px;
-    margin: 0;
-    padding: 0;
+    width: fit-content;
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.svg{
     animation-name: textLoop;
     animation-duration: 30s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-    background-color: red;
 }
+.svg text{
+    color: red;
+}
+
 @keyframes textLoop{
     from{transform: rotate(0deg)}
     to{transform: rotate(360deg)}
