--- a/styles/image-circle.module.css
+++ b/styles/image-circle.module.css
@@ -2,6 +2,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
+    z-index: 22;
 }
 .circle{
     overflow: hidden;
@@ -9,9 +10,21 @@
     height: 150px;
     width: 150px;
 }
+.linkCircle:hover{
+    cursor: pointer;
+    border-color: rgb(232, 236, 10);;
+    border-width: 4px;
+    border-style: solid;
+}
 .text{
     color: white;
+    z-index: 21;
 }
 .container{
     position: relative;
+}
+.link:hover{
+    cursor: pointer;
+    border: solid black 2px;
+    z-index: 22;
 }
