--- a/styles/section-layout.module.css
+++ b/styles/section-layout.module.css
@@ -1,14 +1,40 @@
+.layout{
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+    min-height: 100vh;
+    justify-content: space-between;
+}
 .container{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width: 100%;
+    padding-inline: 100px;
     position: relative;
-    height: 100vh;
+    height: fit-content;
+    flex-wrap: wrap;
+    flex-grow: 2;
+    min-height: 60vh;
 }
 .imageContainer{
     display: flex;
     justify-content: center;
     align-items: center;
+    min-width: 300px;
+    z-index: 20;
+}
+.blurb{
+    margin-left: auto;
+    margin-right: 150px;
+    padding-left: 150px;
+    height: fit-content;
+}
+@media only screen and (max-width: 450px) {
+    .blurb{
+        padding-left: 50px;
+        margin-right: 100px;
+    }
 }
