--- a/styles/blurb.module.css
+++ b/styles/blurb.module.css
@@ -12,7 +12,13 @@
     font-size: 30px;
     overflow-wrap: break-word;
     min-width: 0;
-}@media only screen and (max-width: 450px) {
+}
+@media only screen and (max-width: 750px) {
+    .text{
+        max-width: 40vw;
+    }
+}
+@media only screen and (max-width: 450px) {
     .text{
         font-size: 20px;
     }
