nav styling change

--- a/styles/directory.module.css
+++ b/styles/directory.module.css
@@ -50,6 +50,10 @@
     text-underline-offset: 3px;
     transition: none;
 }
+.active{
+    text-decoration: underline 3px solid rgb(232, 236, 10);
+    text-underline-offset: 3px;
+}
 .portfolioSectionOff{
     opacity: 0 !important;
     cursor: default !important;
